--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -23,14 +23,9 @@ html
 
       .menu_items_right
           - if user_signed_in?
-            div.username
+            .username data-props=''
               = link_to current_user.name, current_user
               = link_to 'Выйти', destroy_user_session_path, method: :delete
-
-          - else
-            div.log_in
-              = link_to 'Регистрация', new_user_registration_path
-              = link_to 'Вход', new_user_session_path
 
     .container
       = yield
