--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -50,4 +50,12 @@
   .description
     h3
       | Твои новые соседи уже ждут
-    = link_to 'Зарегистрироваться', new_user_registration_path, class: 'l_button primary_button'
+    = link_to 'Зарегистрироваться', new_user_registration_path, class: 'l_button flat_button'
+
+.footer
+  .left_side
+    .p3 © 2020 S!Mate
+  .right_side
+    .p3 FAQ
+    .p3 Правила и условия
+    .p3 Конфиденциальность и cookie-файлы
