--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,6 @@
+@import 'fonts';
+@import 'colors';
+
 .hero {
   margin-top: 56px;
   display: flex;
@@ -150,12 +153,16 @@
 
     h3 {
       max-width: 360px;
-      margin-bottom:  28px;
+      margin-bottom:  8px;
     }
 
     .l_button.primary_button {
       margin-right: 20px;
       // width: 140px;
+    }
+
+    .l_button.flat_button {
+      padding-left: 0px;
     }
   }
 
