--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,28 +1,64 @@
-.register
-  h1
-    | Регистрация
-  = form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'sign_in_form'}) do |f|
+.sign_up_form
+  div
+    .spacing-xxxl-h
+  h3 Регистрация
+
+  div
+    .spacing-xl-h
+
+  .p2
+      | Уже зарегистрированы? &#160;
+      = link_to 'Войти', new_user_session_path, class: 'primary'
+
+  div
+    .spacing-xl-h
+
+  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
     = render "devise/shared/error_messages", resource: resource
 
-    .field
-      = f.label :name
-      = f.text_field :name, autocomplete: "name"
+    .label_default_input
+      = f.text_field :name, placeholder: 'Имя', autocomplete: "name", class: 'default_input', value: ''
+      = f.label :name, 'Имя'
 
-    .field
-      = f.label :surname
-      = f.text_field :surname, autocomplete: "surname"
+    div
+      .spacing-m-h
 
-    .field
-      = f.label :email
-      = f.email_field :email, autocomplete: "email"
+    .label_default_input
+      = f.text_field :surname, placeholder: 'Фамилия', autocomplete: "surname", class: 'default_input', value: ''
+      = f.label :surname, 'Фамилия'
 
-    .field
-      = f.label :password
-      = f.password_field :password, autocomplete: "new-password"
+    div
+      .spacing-m-h
 
-    .field
-      = f.label :password_confirmation
-      = f.password_field :password_confirmation, autocomplete: "new-password"
+    .label_default_input
+      = f.email_field :email, placeholder: 'E-mail', autocomplete: "email", class: 'default_input'
+      = f.label :email, 'E-mail'
 
-    .actions
-      = f.submit "Зарегистрироваться"
+
+    div
+      .spacing-m-h
+
+    .label_default_input
+      = f.password_field :password, placeholder: 'Пароль', autocomplete: "new-password", class: 'default_input', value: ''
+      = f.label :password, 'Пароль'
+
+    div
+      .spacing-m-h
+
+    .label_default_input
+      = f.password_field :password_confirmation, placeholder: 'Подтвердите пароль', autocomplete: "new-password", class: 'default_input', value: ''
+      = f.label :password_confirmation, 'Подтвердите пароль'
+
+    div
+      .spacing-m-h
+
+
+    = f.submit "Зарегистрироваться", class: 'l_button primary_button'
+
+    div
+      .spacing-m-h
+
+    .p4.gray1 Создавая личный кабинет, вы соглашаетесь с нашими Условиями использования & Политикой Конфиденциальности
+
+    div
+      .spacing-m-h
