deleted useless links

--- a/app/views/flats/index.html.slim
+++ b/app/views/flats/index.html.slim
@@ -6,4 +6,4 @@
     = render partial: 'flat_card', collection: @flats, as: :flat
 
   .tertiary
-    = link_to 'Добавить объявление', new_flat_path, class: 'm_button secondary_button'
+    = link_to 'Добавить объявление','', class: 'm_button secondary_button'
