--- a/app/views/flats/show.html.slim
+++ b/app/views/flats/show.html.slim
@@ -43,5 +43,5 @@
       h4
         | Карта
       iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2242.365351286026!2d37.51109561565865!3d55.80425739549012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b549b5690611df%3A0x2793b6d687e61ea1!2z0JvQtdC90LjQvdCz0YDQsNC00YHQutC40Lkg0L_RgC3Rgi4sIDc10LoxLCDQnNC-0YHQutCy0LAsIDEyNTA1Nw!5e0!3m2!1sru!2sru!4v1590620585025!5m2!1sru!2sru" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
-      = link_to 'Edit', edit_flat_path(@flat)
-      = link_to 'Destroy', @flat, method: :delete, data: { confirm: 'Are you sure?' }
+      //= link_to 'Edit', edit_flat_path(@flat)
+      //= link_to 'Destroy', @flat, method: :delete, data: { confirm: 'Are you sure?' }
