--- a/app/assets/stylesheets/flats.scss
+++ b/app/assets/stylesheets/flats.scss
@@ -4,6 +4,7 @@
 @import "colors";
 @import "fonts";
 @import "icons";
+@import 'atoms';
 
 // Index
 
@@ -40,6 +41,7 @@
 
 .cta_block {
   padding: 20px;
+  position: -webkit-sticky;
   position: sticky;
   margin-top: 132px;
   top: 80px;
@@ -85,12 +87,17 @@
         margin-top: 16px;
       }
 
-      .photo {
-        width: 64px;
-        height: 64px;
+      // .photo {
+      //   width: 64px;
+      //   height: 64px;
+      //   margin: 12px;
+      //   background-color: $grey3;
+      //   border-radius: 4px;
+      // }
+
+      img.photo {
+        @include images(64px, 64px, 4px);
         margin: 12px;
-        background-color: $grey3;
-        border-radius: 4px;
       }
 
       .about_person {
