--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -16,8 +16,7 @@
       .m_badge.primary_badge Курит
       .m_badge.primary_badge Есть домашнее животное
 
-    .p2
-      | Работаю дизайнером в своей веб-студии, дома бываю нечасто, в основном чтобы переночевать. Гостей парней и прочую живность не вожу. Живу с лысым котом, к лотку приучен, из комнаты не выходиит. Вообще я могу много чего о себе написать, например, ка кпочти научилась укладываться в дедлайны. Это особое умение, и я готова поделитсья им с миром.
+    .p2 #{@user.persnonal_info}
 
     div
       .spacing-xl-h
