--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -16,7 +16,8 @@
       .m_badge.primary_badge Курит
       .m_badge.primary_badge Есть домашнее животное
 
-    .p2 #{@user.persnonal_info}
+    .p2
+      = @user.personal_info
 
     div
       .spacing-xl-h
