--- a/app/assets/stylesheets/menubar.scss
+++ b/app/assets/stylesheets/menubar.scss
@@ -11,7 +11,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding-top: 12px;
+  padding-top: 8px;
   padding-left: 186px;
   padding-right: 98px;
   font-size: 18px;
@@ -28,8 +28,9 @@
     display: block;
     background-image: url("logo.svg");
     background-size: cover;
-    width: 94px;
+    width: 92px;
     height: 20px;
+    margin-top: -8px;
   }
 
   .menu_items_left {
@@ -82,13 +83,13 @@
 .conversation_menubar {
   top:0px;
   width: calc(100vw - 64px);
-  height: 64px;
+  height: 60px;
   background-color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding-top: 12px;
+  padding-top: 8px;
   padding-left: 32px;
   padding-right: 32px;
   font-size: 18px;
@@ -107,6 +108,7 @@
     background-size: cover;
     width: 94px;
     height: 20px;
+    margin-top: -8px;
   }
 
   .menu_items_left {
