--- a/app/assets/stylesheets/flats.scss
+++ b/app/assets/stylesheets/flats.scss
@@ -82,6 +82,11 @@
       border-radius: 8px;
       border: 1px solid $grey2;
 
+      &:hover {
+        box-shadow: 2px 2px 16px 0 rgba(0, 0, 0, 0.12);
+        cursor: pointer;
+      }
+
       .p2 {
         max-width: 148px;
         margin-top: 16px;
