--- a/app/assets/stylesheets/flats.scss
+++ b/app/assets/stylesheets/flats.scss
@@ -34,7 +34,7 @@
 .flat_info_wrapper {
   width: 700px;
 
-  .arrow_back {
+  .p2.arrow_back {
     margin-bottom: 20px;
   }
 }
@@ -44,7 +44,7 @@
   position: -webkit-sticky;
   position: sticky;
   margin-top: 132px;
-  top: 80px;
+  top: 72px;
   margin-left: 40px;
   height: 100%;
   width: 328px;
