--- a/app/views/flats/show.html.slim
+++ b/app/views/flats/show.html.slim
@@ -14,8 +14,8 @@
 
 
   .flat_info_wrapper
-    .p2.arrow_back
-      = link_to '← Назад', flats_path
+    //.p2.arrow_back
+    //  = link_to '← Назад', flats_path
     h3
       | Комната в трешке на соколе
     .photosFlat
