--- a/app/assets/stylesheets/flats.scss
+++ b/app/assets/stylesheets/flats.scss
@@ -34,16 +34,20 @@
 .flat_info_wrapper {
   width: 700px;
 
-  .p2.arrow_back {
-    margin-bottom: 20px;
+  h3 {
+    margin-bottom: -20px;
   }
+
+  // .p2.arrow_back {
+  //   margin-bottom: 20px;
+  // }
 }
 
 .cta_block {
   padding: 20px;
   position: -webkit-sticky;
   position: sticky;
-  margin-top: 132px;
+  margin-top: 72px;
   top: 72px;
   margin-left: 40px;
   height: 100%;
